--- a/index.html
+++ b/index.html
@@ -11,7 +11,31 @@
 </head>
 
 <body>
+    <header>
+        <!-- nav-area -->
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container">
+                <a class="navbar-brand" href="#"><b>DigiTech</b></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="col d-flex justify-content-center">
+                        <div class="navbar-nav fw-bold">
+                            <a class="nav-link  mx-4" aria-current="page" href="#">Home</a>
+                            <a class="nav-link mx-4" href="#">Courses</a>
+                            <a class="nav-link mx-4" href="#">Success</a>
+                            <a class="nav-link  mx-4" href="#">About</a>
+                            <a class="nav-link  mx-4" href="#">Register</a>
+                        </div>
+                    </div>
 
+                </div>
+            </div>
+        </nav>
+    </header>
 
 
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
