--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <title>Digi-tech-center</title>
     <!-- bootstrap cdn -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <!-- css link -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
         <!-- nav-area -->
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg bg-light p-3 mb-3">
             <div class="container">
                 <a class="navbar-brand" href="#"><b>DigiTech</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -31,11 +33,70 @@
                             <a class="nav-link  mx-4" href="#">Register</a>
                         </div>
                     </div>
-
                 </div>
             </div>
         </nav>
+
+        <!-- slider-area -->
+        <section class="container">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-inner rounded">
+                    <div class="carousel-item active ">
+                        <img src="img/cover/cover-1.png" class="d-block w-100 overlay" alt="">
+                        <div
+                            class="carousel-caption d-flex  justify-content-center align-items-center d-block d-md-block h-50 my-4">
+                            <div>
+                                <h5 class="display-6 fw-bold">Get Started Digital Learning</h5>
+                                <p class="d-md-block d-lg-block d-none">It is a long established fact that a reader will
+                                    be distracted by the readable<br> content of a page when looking at its layout.</p>
+                                <a href="#" class="btn btn-primary px-4 mb-2">Get Started</a>
+                            </div>
+
+                        </div>
+
+
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/cover/cover-2.jpg" class="d-block w-100 overlay" alt="">
+                        <div
+                            class="carousel-caption d-flex  justify-content-center align-items-center d-block d-md-block h-50 mb-4">
+                            <div>
+                                <h5 class="display-6 fw-bold">Get Started Digital Learning</h5>
+                                <p class="d-md-block d-lg-block d-none">It is a long established fact that a reader will
+                                    be distracted by the readable<br> content of a page when looking at its layout.</p>
+                                <a href="#" class="btn btn-primary px-4 mb-2">Get Started</a>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/cover/cover-3.jpg" class="d-block w-100 overlay" alt="">
+                        <div
+                            class="carousel-caption h-50 d-flex  justify-content-center align-items-center d-block d-md-block mb-4">
+                            <div class="">
+                                <h5 class="display-6 fw-bold">Get Started Digital Learning</h5>
+                                <p class="d-md-block d-lg-block d-none">It is a long established fact that a reader will
+                                    be distracted by the readable<br> content of a page when looking at its layout.</p>
+                                <a href="#" class="btn btn-primary px-4 mb-2">Get Started</a>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
     </header>
+    <!-- Courses-area -->
 
 
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
