--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
 
         <!-- slider-area -->
-        <section class="container">
+        <section class="container my-4">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                 <div class="carousel-inner rounded">
                     <div class="carousel-item active ">
@@ -51,10 +51,7 @@
                                     be distracted by the readable<br> content of a page when looking at its layout.</p>
                                 <a href="#" class="btn btn-primary px-4 mb-2">Get Started</a>
                             </div>
-
                         </div>
-
-
                     </div>
                     <div class="carousel-item">
                         <img src="img/cover/cover-2.jpg" class="d-block w-100 overlay" alt="">
@@ -66,7 +63,6 @@
                                     be distracted by the readable<br> content of a page when looking at its layout.</p>
                                 <a href="#" class="btn btn-primary px-4 mb-2">Get Started</a>
                             </div>
-
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -79,7 +75,6 @@
                                     be distracted by the readable<br> content of a page when looking at its layout.</p>
                                 <a href="#" class="btn btn-primary px-4 mb-2">Get Started</a>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -97,6 +92,95 @@
         </section>
     </header>
     <!-- Courses-area -->
+    <main>
+        <section class="container">
+            <div class="text-center w-lg-50 w-sm-75 m-auto py-4">
+                <h2 class="fw-bold">Discover Our Popular Courses</h2>
+                <p>
+                    It is a long established fact that a reader will be distracted by the readable content of a page
+                    when
+                    looking at its layout.
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-md-12">
+                    <div class="row ">
+                        <div class="col-12">
+                            <div class="card d-flex flex-lg-row flex-md-row flex-sm-column m-3">
+                                <img class="img-fluid" src="img/course/course-1.png" alt="">
+                                <div class="card-info p-3">
+                                    <h5 class="fw-bold">Fundamental Of UI/UX Design</h5>
+                                    <p>Some quick example text to build on the card title and make up the bulk of the
+                                        card.</p>
+                                    <small class="text-primary fw-bold">Price : $200</small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="card d-flex flex-lg-row flex-md-row flex-sm-column m-3">
+                                <img class="img-fluid" src="img/course/course-3.png" alt="">
+                                <div class="card-info p-3">
+                                    <h5 class="fw-bold">Fullstack Web Development </h5>
+                                    <p>Some quick example text to build on the card title and make up
+                                        the bulk of the card.</p>
+                                    <small class="text-primary fw-bold">Price : $200</small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="card d-flex flex-lg-row flex-md-row flex-sm-column m-3">
+                                <img class="img-fluid" src="img/course/course-5.png" alt="">
+                                <div class="card-info p-3">
+                                    <h5 class="fw-bold">Photography Basic Rules</h5>
+                                    <p>Some quick example text to build on the card title and make up
+                                        the bulk of the card.</p>
+                                    <small class="text-primary fw-bold">Price : $200</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="row ">
+                        <div class="col-12">
+                            <div class="card d-flex flex-lg-row flex-md-row flex-sm-column m-3">
+                                <img class="img-fluid" src="img/course/course-2.png" alt="">
+                                <div class="card-info p-3">
+                                    <h5 class="fw-bold">Javascript Basic to advanced</h5>
+                                    <p>Some quick example text to build on the card title and make up the bulk of the
+                                        card.</p>
+                                    <small class="text-primary fw-bold">Price : $200</small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="card d-flex flex-lg-row flex-md-row flex-sm-column m-3">
+                                <img class="img-fluid" src="img/course/course-4.png" alt="">
+                                <div class="card-info p-3">
+                                    <h5 class="fw-bold">Digital Marketing</h5>
+                                    <p>Some quick example text to build on the card title and make up
+                                        the bulk of the card.</p>
+                                    <small class="text-primary fw-bold">Price : $200</small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="card d-flex flex-lg-row flex-md-row flex-sm-column m-3">
+                                <img class="img-fluid" src="img/course/course-6.png" alt="">
+                                <div class="card-info p-3">
+                                    <h5 class="fw-bold">Motion Graphics</h5>
+                                    <p>Some quick example text to build on the card title and make up
+                                        the bulk of the card.</p>
+                                    <small class="text-primary fw-bold">Price : $200</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="btn btn-primary w-25 m-auto my-3">See More Courses</a>
+            </div>
+        </section>
+    </main>
 
 
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
