join-button-added

--- a/index.html
+++ b/index.html
@@ -177,10 +177,50 @@
                         </div>
                     </div>
                 </div>
-                <a href="#" class="btn btn-primary w-25 m-auto my-3">See More Courses</a>
+
+            </div>
+            <div class="text-center">
+                <a href="#" class="btn btn-primary w-lg-50 m-auto my-3">See More Courses</a>
+            </div>
+        </section>
+
+        <!-- Ready TO join area -->
+        <section class="container bg-primary py-4 rounded my-4">
+            <div class="d-flex align-items-center justify-content-around text-light">
+                <div class="left-side w-50">
+                    <h3>Ready to join?</h3>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</p>
+                </div>
+                <div class="right-side">
+                    <button class="btn btn-light text-primary fw-bold px-3" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">Register Now</button>
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title text-primary" id="exampleModalLabel">Ready to join?</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body text-dark">
+                                    <p>Do not wast your time!! Have fun with us</p>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary"
+                                        data-bs-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
+
 
 
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
