--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digi-tech-center</title>
+    <!-- font-awesome-link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- bootstrap cdn -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <!-- css link -->
@@ -185,14 +187,15 @@
         </section>
 
         <!-- Ready TO join area -->
-        <section class="container bg-primary py-4 rounded my-4">
-            <div class="d-flex align-items-center justify-content-around text-light">
-                <div class="left-side w-50">
+        <section class="container  my-4">
+            <div
+                class="d-flex flex-sm-row align-items-center justify-content-around text-light bg-primary py-4 rounded">
+                <div class="left-side w-50 ">
                     <h3>Ready to join?</h3>
                     <p>It is a long established fact that a reader will be distracted by the readable content of a page
                         when looking at its layout.</p>
                 </div>
-                <div class="right-side">
+                <div class="right-side ">
                     <button class="btn btn-light text-primary fw-bold px-3" data-bs-toggle="modal"
                         data-bs-target="#exampleModal">Register Now</button>
                     <!-- Modal -->
@@ -219,9 +222,108 @@
                 </div>
             </div>
         </section>
+
+        <!-- Frequently Asked Questions area -->
+        <section class="container w-60 py-4 ">
+            <div class="text-center my-4 ">
+                <h3>Frequently Asked Questions</h3>
+                <p>
+                    It is a long established fact that a reader will be distracted by the readable content of a page
+                    when
+                    looking at its layout.
+                </p>
+            </div>
+            <div class="accordion" id="accordionPanelsStayOpenExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseOne">
+                            what is difference between grid and flex?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                        aria-labelledby="panelsStayOpen-headingOne">
+                        <div class="accordion-body">
+                            <p>Grid and flexbox. The basic difference between CSS Grid Layout and CSS Flexbox Layout is
+                                that flexbox was designed for layout in one dimension - either a row or a column. Grid
+                                was designed for two-dimensional layout - rows, and columns at the same time.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseTwo">
+                            Accordion Item #2
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingTwo">
+                        <div class="accordion-body">
+                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
+                            the collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseThree">
+                            Accordion Item #3
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingThree">
+                        <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes control the overall appearance, as well as the showing and hiding via CSS
+                            transitions. You can modify any of this with custom CSS or overriding our default variables.
+                            It's also worth noting that just about any HTML can go within the
+                            <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- logo-area -->
+        <div class="container py-4 text-center d-none d-lg-block">
+            <div class="logo-area">
+                <h2>Trusted by over 800+ companies</h2>
+                <div class="company">
+                    <img src="img/company/company-1.png" alt="">
+                    <img src="img/company/company-2.png  " alt="">
+                    <img src="img/company/company-3.png" alt="">
+                    <img src="img/company/company-4.png" alt="">
+                    <img src="img/company/company-5.png" alt="">
+                    <img src="img/company/company-6.png" alt="">
+
+                </div>
+            </div>
+
+        </div>
     </main>
-
-
+    <footer class="bg-dark py-4">
+        <div class="container text-center text-light">
+            <h4>DigiTech</h4>
+            <p>
+                Office 41, Zawaya Buildin, Ghala Muscat, Sultanate of Oman
+            </p>
+            <div class="icon ">
+                <a href=""><i class="fa-brands fa-facebook text-light "></i></a>
+                <a href=""><i class="fa-brands fa-twitter text-light mx-3 "></i></a>
+                <a href=""><i class="fa-brands fa-linkedin text-light "></i></a>
+            </div>
+        </div>
+    </footer>
 
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
